--- a/student_bio.html
+++ b/student_bio.html
@@ -3,29 +3,44 @@
 <title>Robert Black's Bio</title>
 <header>
 	<img src="https://github.com/RutgersCodingBootcamp/All-Classwork-Homework/blob/master/week-1-html-css-git-heroku/in-class-exercises-1.2/RutgersBanner.png?raw=true" alt="Rutgers Coding Bootcamp">
-	<h1>Student Bio</h1>
+	<h1 class="coolstuff">Student Bio</h1>
 </header>
 <div>
 	<section>
-		<h2>Robert Black</h2>
+		<h2 class="coolstuff">Robert Black</h2>
 		<img src="https://placeholdit.imgix.net/~text?txtsize=19&txt=200%C3%97200&w=200&h=200" alt="not yet">
-		<p>
-	Hello everyone! My name is Robert Black. I am 25 years old and live in Washington NJ. I am currently a Restaurant manager but I am aspiring to be a web developer. I went to Raritan Valley Community College for a 2 year degree in Chemistry. In my spare time I like to take nature walks, play music, play video games, and code code code. I am particularly interested in the back end of Web developement. I am currently strongest at using Java and Ruby. After RCB I am considering continuing my studies in video game developement.
+		<p class="coolstuff">
+		Hello everyone! My name is Robert Black. I am 25 years old and live in Washington NJ. I am aspiring to be a web developer. I went to Raritan Valley Community College for a 2 year degree in Chemistry. In my spare time I like to take nature walks, play music, play video games, and code code code. I am particularly interested in the back end of Web developement. I am currently strongest at using Java and Ruby. After RCB I am considering continuing my studies in video game developement.
 		</p>
 	</section>
 	<section>
-		<h2>Contact Info</h2>
+		<h2 class="coolstuff" id="contact">Contact Info</h2>
 		<ul>
-			<li><b>Email:</b> rbla4655@gmail.com</li>
+			<li><b class="coolstuff">Email:</b> rbla4655@gmail.com</li>
 			<li>
-				<b>GitHub:</b>
-				<a href="https://github.com/Rbla3066"> My GitHub</a>
+				<b class="coolstuff">GitHub:</b>
+				<a class="links" href="https://github.com/Rbla3066"> My GitHub</a>
 			</li>
 			<li>
-				<b>Portfolio:</b>
-				<a href="#"> Coming Soon!</a>
+				<b class="coolstuff">Portfolio:</b>
+				<a class="links"href="#"> Coming Soon!</a>
 			</li>
 		</ul>
 	</section>
 </div>
 </html>
+<style>
+	.coolstuff {
+		text-align: center;
+		color: red;
+		background-color: black;
+		border: 3px solid red;
+		margin:auto;
+	}
+
+	img {
+		margin: auto;
+	}
+	#contact {
+		margin-top: 30px;
+	}
