--- a/student_bio.html
+++ b/student_bio.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 <title>Robert Black's Bio</title>
+<link rel="stylesheet" href="assets/bio.css">
 <div>
 <header>
 	<img src="https://github.com/RutgersCodingBootcamp/All-Classwork-Homework/blob/master/week-1-html-css-git-heroku/in-class-exercises-1.2/RutgersBanner.png?raw=true" alt="Rutgers Coding Bootcamp">
 	<h1 class="coolstuff">Student Bio</h1>
 </header>
 	<section>
-		<h2 class="coolstuff">Robert Black</h2>
+		<h2 class="coolstuff" id="name">Robert Black</h2>
 	</section>
 </div>
-<div>
-	<section>
+<div class="flow">
 		<img id="image" src="https://placeholdit.imgix.net/~text?txtsize=19&txt=200%C3%97200&w=200&h=200" alt="not yet">
 		<p class="coolstuff">
 		Hello everyone! My name is Robert Black. I am 25 years old and live in Washington NJ. I am aspiring to be a web developer. I went to Raritan Valley Community College for a 2 year degree in Chemistry. In my spare time I like to take nature walks, play music, play video games, and code code code. I am particularly interested in the back end of Web developement. I am currently strongest at using Java and Ruby. After RCB I am considering continuing my studies in video game developement.
 		</p>
-	</section>
 </div>
+<div>
 	<section id="contactinfo">
 		<h2 class="coolstuff" id="contact">Contact Info</h2>
 		<ul>
@@ -34,24 +34,4 @@
 	</section>
 </div>
 </html>
-<style>
-	.coolstuff {
-		text-align: center;
-		color: red;
-		background-color: black;
-		border: 3px solid red;
-		margin:auto;
-	}
-
-	#image {
-		float:left;
-	}
-	#contact {
-		clear:both;
-	}
-	#contactinfo {
-		clear:both;
-		
-	}
-	</style>
 
